welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int = {
  val n = nums.length
  var vu6 = false
  var nb = 0
  for (i <- 0 to n-1) {
    if ((nums(i) == 6) && vu6) {
      nb = nb + 1}
    else if ((nums(i)==7) && vu6) {
      nb = nb + 1
      vu6 = false}
    else {
      vu6 = false}
  	}
  }
  return nb
}
